<?xml version="1.0"?>
<package format="3">
  <name>safety_node2</name>
  <version>0.0.0</version>
  <description>Safety node package</description>
  <maintainer email="team3@example.com">Team3</maintainer>
  <license>TODO</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>std_srvs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>